make tests Java 8 compliant